--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,7 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
+
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
+    implementation 'com.firebaseui:firebase-ui-storage:3.2.1'
 }
