--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="at.wifi.swdev.android.wgapp">
 
-    <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.CAMERA" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".shoppinglist.ShowItemShoppingListActivity"></activity>
+        <activity android:name=".qr.QrCodeListActivity"></activity>
+        <activity android:name=".qr.QrCodeAddTableActivity" />
+        <activity android:name=".qr.QrCodeUploadActivity" />
+        <activity android:name=".shoppinglist.ShowItemShoppingListActivity" />
         <activity android:name=".todolist.CustomTodoListActivity" />
         <activity android:name=".todolist.TodoListMainActivity" />
         <activity
@@ -35,5 +35,8 @@
             </intent-filter>
         </activity>
     </application>
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-permission android:name="android.permission.VIBRATE" />
 
 </manifest>
