Project work at WIFI - Day 2 - Calendar

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="at.wifi.swdev.android.wgapp">
 
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.VIBRATE" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,9 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".calendar.CalendarMainActivity"></activity>
+        <activity
+            android:name=".qr.QrCodeListEditActivity"
+            android:parentActivityName=".qr.QrCodeListActivity" />
         <activity
             android:name=".todolist.ShowItemTodoListActivity"
-            android:parentActivityName=".todolist.TodoListMainActivity"/>
+            android:parentActivityName=".todolist.TodoListMainActivity" />
         <activity
             android:name=".qr.QrCodeListActivity"
             android:parentActivityName=".shoppinglist.ShoppingListActivity" />
@@ -48,5 +49,11 @@
             </intent-filter>
         </activity>
     </application>
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-permission android:name="android.permission.VIBRATE" />
+
+    <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
 
 </manifest>
