--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,12 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    compileOptions
+            {
+                sourceCompatibility JavaVersion.VERSION_1_8
+                targetCompatibility JavaVersion.VERSION_1_8
+            }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -53,5 +59,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'com.firebaseui:firebase-ui-storage:3.2.1'
 
-    implementation 'com.applandeo:material-calendar-view:1.8.0-rc01'
+    implementation 'com.applandeo:material-calendar-view:1.7.0'
+    implementation 'org.jetbrains:annotations-java5:15.0'
 }
