--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
 
 android {
     compileSdkVersion 29
@@ -61,4 +62,9 @@ dependencies {
 
     implementation 'com.applandeo:material-calendar-view:1.7.0'
     implementation 'org.jetbrains:annotations-java5:15.0'
+
+
+
+    implementation 'com.google.firebase:firebase-analytics:17.4.3'
+    implementation 'com.google.firebase:firebase-crashlytics:17.0.1'
 }
